get member by application code
